# dmet

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  python-env.nix
src/dmet/: __init__.py  core.py
tests/: test_dmet.py
